--- a/tox.ini
+++ b/tox.ini
@@ -7,9 +7,9 @@ envlist =
 
 [travis:env]
 DJANGO =
-    1.8: django18
-    1.11: django111
     2.0: django20
+    2.1: django21
+    2.2: django22
     master: djangomaster
 
 [testenv]
@@ -21,11 +21,14 @@ setenv =
        PYTHONWARNINGS=once
 deps =
         mock==2.0
+        coreapi==2.2.*
         drf35: djangorestframework>=3.5,<3.6
         drf36: djangorestframework>=3.6,<3.7
         drf37: djangorestframework>=3.7,<3.8
         drf38: djangorestframework>=3.8,<3.9
-        django18: Django>=1.8,<1.9
-        django111: Django>=1.11,<2.0
+        drf39: djangorestframework>=3.9,<3.10
+        drf310: djangorestframework>=3.10,<3.11
         django20: Django>=2.0,<2.1
+        django21: Django>=2.1,<2.2
+        django22: Django>=2.2,<2.3
         djangomaster: https://github.com/django/django/archive/master.tar.gz
